--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ball collision 0.0</title>
+    <title>ball collision 0.1</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="container">
-      <canvas id="myCanvas"></canvas>
+      <canvas id="mycanvas"></canvas>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
