--- a/html/ver0.4.html
+++ b/html/ver0.4.html
@@ -3,30 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Collision Home page</title>
+    <link rel="stylesheet" href="..\styles.css" />
+    <title>Ball collision 0.4</title>
   </head>
   <body>
     <div class="flex-container info">
-      <h1>.......</h1>
+      <h1>v0.4</h1>
     </div>
     <div class="flex-container canvas-container" id="container">
-      <!-- <canvas id="mycanvas"> -->
-      <h1 style="padding: 10px">Select a Version</h1>
-      <!-- </canvas> -->
+      <canvas id="mycanvas"></canvas>
     </div>
     <div class="flex-container menu">
       <div class="dropdown">
         <button class="dropbtn" onclick="toggleDropdown()">Versions</button>
         <div class="dropdown-content">
-          <a href="html\ver0.0.html">Version 0.0</a>
-          <a href="html\ver0.1.html">Version 0.1</a>
-          <a href="html\ver0.2.html">Version 0.2</a>
-          <a href="html\ver0.3.html">Version 0.3</a>
-          <a href="html\ver0.4.html">Version 0.4</a>
+          <a href="ver0.0.html">Version 0.0</a>
+          <a href="ver0.1.html">Version 0.1</a>
+          <a href="ver0.2.html">Version 0.2</a>
+          <a href="ver0.3.html">Version 0.3</a>
+          <a href="ver0.4.html">Version 0.4</a>
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="..\scripts\ver0.4.js"></script>
+    <script src="..\index.js"></script>
   </body>
 </html>
